<resources>
    <string name="app_name">Recan Demo</string>
    <string name="app_name1">Recan</string>
    <string name="app_Name">RECAN</string>
    <string name="user_email">อีเมล์</string>
    <string name="password">รหัสผ่าน</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="register">สมัครใช้งาน</string>
    <string name="bui">สร้างบัญชี ผู้ใช้งาน</string>
    <string name="bub">ยังไม่มีบัญชีผู้ใช้งานหรือไม่ ?</string>
    <string name="myApi">AIzaSyBPAkbyggtkKBbOIV6snsbhRDIIlhu-wRY</string>
    <string name="galoy">โรงอาหารกาสะลองคำ</string>
    <string name="app_name2">AndroidSpinnerExample</string>
    <string name="spinner_title">Select Category</string>
    <string name="galoy_mater">โรงอาหาร</string>
    <string name="galoy_time">เปิด วันพุธ–วันศุกร์:11.00 – 17.00</string>
    <string name="lind">อาคารเรียนรวม 1</string>
    <string name="lind_mater">มหาวิทยาลัย</string>
    <string name="lind_time">เปิด วันจันทร์–วันอังคาร:11.00 – 17.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map_location">Map</string>


    <string name="action_settings">Settings</string>
    <string name="button_upload">Upload</string>
    <string name="button_download">Download</string>
    <string name="delete_file">Delete file</string>
    <string name="download_in_memory">Download in memory</string>
    <string name="download_in_file">Download in file</string>
    <string name="download_via_url">Download via url</string>
    <string name="upload_from_memory">Upload from memory</string>
    <string name="upload_from_stream">Upload from stream</string>
    <string name="upload_from_file">Upload from file</string>
    <string name="upload_resume">Resume upload</string>
    <string name="upload_paused">Upload is paused</string>
    <string name="metadata_get">Get metadata</string>
    <string name="metadata_update">Update metadata</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_location_new">Map</string>
    <string name="error_location_provider">error</string>

</resources>
