<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="25dp">

    <TextView
            android:layout_width="414dp"
            android:textSize="46dp"
            android:text="@string/app_Name"
            android:background="@color/colorblue"
            android:textColor="@color/colorWhiet"
            android:paddingBottom="15dp"
            android:gravity="bottom|center"
            android:fontFamily="@font/ab"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:focusableInTouchMode="true"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:layout_marginBottom="8dp" android:layout_height="100dp"/>
    <TextView
            android:id="@+id/Register"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:textSize="20dp"

            android:text="@string/register"
            android:background="@color/colorblue"
            android:textColor="@color/colorWhiet"
            android:paddingBottom="10dp"
            android:gravity="bottom|center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
    />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="76dp"
            android:id="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginBottom="17dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp">
        <TextView
                android:text="@string/user_email"
                android:paddingBottom="7dp"
                android:textColor="@color/colorblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="153dp"
                tools:layout_editor_absoluteX="44dp"
                android:id="@+id/textView"

        />
        <EditText
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_border"
                android:hint="joht slow"
                android:id="@+id/edit_user"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="#000000"
                tools:layout_editor_absoluteY="174dp"
                tools:layout_editor_absoluteX="40dp"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/login" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:id="@+id/text_password"
                android:text="@string/password"
                android:paddingBottom="7dp"
                android:textStyle="bold"
                android:textColor="@color/colorblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="153dp"
                tools:layout_editor_absoluteX="44dp"


        />
        <EditText
                android:id="@+id/edit_password"
                android:layout_width="325dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_text_border"
                android:hint="12345789"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColor="#000000"
                tools:layout_editor_absoluteY="174dp"
                tools:layout_editor_absoluteX="40dp"/>
        <CheckBox
                android:layout_marginTop="1dp"
                android:id="@+id/saveLoginCheckBox"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/edit_password"
                android:text="Save Login?"
                android:textColor="@color/colorblue" />
    </LinearLayout>


    <Button
            android:id="@+id/login"
            android:text="@string/login"
            android:background="@drawable/button_bg_rounded_corners"
            android:textColor="@color/colorWhiet"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="132dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp" android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/bub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/Register"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="25dp"/>
    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>