<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Homepage"
        >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="0dp"
              android:layout_height="0dp"
              android:id="@+id/map"
              tools:context=".Map_location"
              android:name="com.google.android.gms.maps.SupportMapFragment" map:layout_constraintEnd_toEndOf="parent"
              map:layout_constraintTop_toTopOf="parent" map:layout_constraintStart_toStartOf="parent"
              map:layout_constraintBottom_toBottomOf="parent" />




    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="77dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12" android:layout_marginBottom="4dp">


        <TableRow
                android:layout_width="fill_parent"

        >
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_menu_notroud"
                    android:layout_marginBottom="1dp"
            >
                <LinearLayout
                        android:id="@+id/text_galoy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true">
                    <LinearLayout
                            android:layout_width="252dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingLeft="15dp"

                            android:paddingTop="10dp">


                        <TextView
                                android:text="@string/galoy"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/Location_name"
                                android:textStyle="bold"
                                android:textSize="20dp"
                                android:fontFamily="@font/rsu"
                                android:textColor="@color/colorfly"
                                android:layout_marginBottom="5dp"/>
                        <TextView
                                android:text="@string/galoy_mater"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/Location_detail"
                                android:textSize="15dp"
                                android:fontFamily="@font/rsu"

                        />
                        <TextView
                                android:text="@string/galoy_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:fontFamily="@font/rsu"

                                android:id="@+id/Location_time"/>
                    </LinearLayout>


                    <LinearLayout
                            android:id="@+id/galou"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                    >
                        <ImageView
                                android:layout_width="70dp"
                                android:layout_height="112dp"
                                android:src="@mipmap/ic_narrow"
                                android:id="@+id/galoy_narrow"
                                android:padding="15dp"
                                android:layout_gravity="center"
                        />


                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>

        </TableRow>

        <TableRow
                android:layout_width="fill_parent">

            <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_menu_notroud"

            >
                <LinearLayout
                        android:id="@+id/textfide_lend"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true">
                    <LinearLayout
                            android:id="@+id/text_lend"
                            android:layout_width="252dp"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingLeft="15dp"
                            android:paddingTop="10dp">


                        <TextView
                                android:text="@string/lind"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/Lend_name"
                                android:textStyle="bold"
                                android:textSize="20dp"
                                android:fontFamily="@font/rsu"

                                android:textColor="@color/colorfly"
                                android:layout_marginBottom="5dp"/>
                        <TextView
                                android:text="@string/lind_mater"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/Lend_detail"
                                android:textSize="15dp"
                                android:fontFamily="@font/rsu"

                                />
                        <TextView
                                android:text="@string/lind_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:fontFamily="@font/rsu"

                                android:id="@+id/Lend_time"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/lind_img"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                    >
                        <ImageView
                                android:layout_width="70dp"
                                android:layout_height="match_parent"
                                android:src="@mipmap/ic_narrow"
                                android:id="@+id/Lind_narrow"
                                android:padding="15dp"
                                android:layout_gravity="center"
                        />


                    </LinearLayout>

                </LinearLayout>



            </RelativeLayout>

        </TableRow>


    </TableLayout>

</android.support.constraint.ConstraintLayout>